--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                 <!-- RD Navbar Toggle-->
                 <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                 <!-- RD Navbar Brand-->
-                <div class="rd-navbar-brand"><a class="brand" href="index.html"><img
-                      src="images/logo-default-199x48.png" alt="" width="199" height="48" /></a></div>
+                <div class="rd-navbar-brand"><a class="brand" href="index.html">Abu Dhabi Landscape
+                  </a></div>
               </div>
               <div class="rd-navbar-main-element">
                 <div class="rd-navbar-nav-wrap">
