--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             <div class="box-project wow slideInLeft">
               <div class="box-project-content">
                 <h3 class="box-project-title">More than <span>300</span> projects</h3>
-                <p class="box-project-text">A variety of customly designed landscapes.</p><a
+                <p class="box-project-text">A variety of customly designed Buildings.</p><a
                   class="button button-md button-default-outline" href="#">See all</a>
               </div>
             </div>
@@ -745,14 +745,14 @@
     </section>
     <footer class="section footer-minimal context-dark">
       <div class="container">
-        <div class="footer-minimal-inset oh">
+        <!-- <div class="footer-minimal-inset oh">
           <ul class="footer-list-category-2">
             <li><a href="#">About Us</a></li>
             <li><a href="#">Carriers</a></li>
             <li><a href="#">Our Plans</a></li>
             <li><a href="#">Connect with us</a></li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </footer>
     <div class="modal modal-video" id="exampleModal" tabindex="-1" role="dialog">
