Link to contact added in swiper button

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
               <p class="swiper-slider-text text-width-extra-large" data-caption-animate="fadeInRight"
                 data-caption-delay="0">Expert landscaping, gardening, and maintenance services that bring your vision to
                 life.</p>
-              <div class="oh button-wrap"><a class="button button-primary" href="#" data-caption-animate="slideInUp"
+              <div class="oh button-wrap"><a class="button button-primary" href="#contacts" data-caption-animate="slideInUp"
                   data-caption-delay="200">Get a Free Quote</a></div>
             </div>
           </div>
@@ -223,7 +223,7 @@
               <p class="swiper-slider-text text-width-extra-large" data-caption-animate="fadeInLeft"
                 data-caption-delay="200">Our gardening and landscape design experts are ready to offer you their help
                 and assistance in creating the landscape of your dream.</p>
-              <div class="oh button-wrap"><a class="button button-primary" href="#" data-caption-animate="slideInDown"
+              <div class="oh button-wrap"><a class="button button-primary" href="#contacts" data-caption-animate="slideInDown"
                   data-caption-delay="0">Get a Free Quote</a></div>
             </div>
           </div>
@@ -237,7 +237,7 @@
               <p class="swiper-slider-text text-width-extra-large" data-caption-animate="fadeInLeft"
                 data-caption-delay="200">With over 20 prestigious awards, Abu Dhabi Landscape is on top of the industry
               </p>
-              <div class="oh button-wrap"><a class="button button-primary" href="#" data-caption-animate="slideInUp"
+              <div class="oh button-wrap"><a class="button button-primary" href="#contacts" data-caption-animate="slideInUp"
                   data-caption-delay="400">Get a Free Quote</a></div>
             </div>
           </div>
@@ -343,7 +343,7 @@
           <!-- Project 2 -->
           <div class="project-card wow fadeInUp" data-wow-delay="0.2s">
             <div class="project-image">
-              <img src="images/project2.jpg" alt="Garden Paradise" />
+              <img src="images/garden3.jpg" alt="Garden Paradise" />
               <div class="project-overlay">
                 <div class="project-info">
                   <h3 class="project-title">Garden Paradise</h3>
@@ -522,7 +522,7 @@
 
     <!-- Our mission-->
     <section class="section section-lg section-inset-custom-4 context-dark bg-overlay-4-60 bg-vide" id="1"
-      data-vide-bg="video/project1" data-vide-options="posterType: jpg, position: 50% 50%">
+      data-vide-bg="video/slider3" data-vide-options="posterType: jpg, position: 50% 50%">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-10 col-xl-8">
@@ -539,8 +539,8 @@
 
                 Our extensive portfolio demonstrates our ability to work with a variety of styles, whilst creating
                 beautiful yet functional outdoor living spaces..</p>
-              <button class="video-classic-play" type="button" data-toggle="modal" data-target="#exampleModal"
-                data-video-trigger="#1"><span></span></button>
+              <!-- <button class="video-classic-play" type="button" data-toggle="modal" data-target="#exampleModal"
+                data-video-trigger="#1"><span></span></button> -->
             </div>
           </div>
         </div>
@@ -720,27 +720,38 @@
           <article class="thumbnail thumbnail-mary">
             <div class="thumbnail-mary-figure"><img src="images/img1.jpg" alt="" width="270" height="195" />
             </div>
-            <div class="thumbnail-mary-caption"><a class="icon fl-bigmug-line-zoom60"
-                href="images/landscape-design/gallery-image-1-1200x800-original.jpg" data-lightgallery="item"><img
-                  src="images/img2.jpg" alt="" width="270" height="195" /></a>
+            <div class="thumbnail-mary-caption"><a class="icon fl-bigmug-line-zoom60" href="images/img2.jpg"
+                data-lightgallery="item"><img src="images/img2.jpg" alt="" width="270" height="195" /></a>
             </div>
           </article>
           <!-- Thumbnail Classic-->
           <article class="thumbnail thumbnail-mary">
             <div class="thumbnail-mary-figure"><img src="images/img3.jpg" alt="" width="270" height="195" />
             </div>
-            <div class="thumbnail-mary-caption"><a class="icon fl-bigmug-line-zoom60"
-                href="images/landscape-design/project-3-1200x800-original.jpg" data-lightgallery="item"><img
-                  src="images/slider1.jpg" alt="" width="270" height="195" /></a>
+            <div class="thumbnail-mary-caption"><a class="icon fl-bigmug-line-zoom60" href="images/garden1.jpg"
+                data-lightgallery="item"><img src="images/garden1.jpg" alt="" width="270" height="195" /></a>
+            </div>
+          </article>
+          <article class="thumbnail thumbnail-mary">
+            <div class="thumbnail-mary-figure"><img src="images/img3.jpg" alt="" width="270" height="195" />
+            </div>
+            <div class="thumbnail-mary-caption"><a class="icon fl-bigmug-line-zoom60" href="images/slider1.jpg"
+                data-lightgallery="item"><img src="images/slider1.jpg" alt="" width="270" height="195" /></a>
+            </div>
+          </article>
+          <article class="thumbnail thumbnail-mary">
+            <div class="thumbnail-mary-figure"><img src="images/img3.jpg" alt="" width="270" height="195" />
+            </div>
+            <div class="thumbnail-mary-caption"><a class="icon fl-bigmug-line-zoom60" href="images/garden2.jpg"
+                data-lightgallery="item"><img src="images/garden2.jpg" alt="" width="270" height="195" /></a>
             </div>
           </article>
           <!-- Thumbnail Classic-->
           <article class="thumbnail thumbnail-mary">
             <div class="thumbnail-mary-figure"><img src="images/slider2.jpg" alt="" width="270" height="195" />
             </div>
-            <div class="thumbnail-mary-caption"><a class="icon fl-bigmug-line-zoom60"
-                href="images/landscape-design/gallery-image-2-1200x800-original.jpg" data-lightgallery="item"><img
-                  src="images/slider3.jpg" alt="" width="270" height="195" /></a>
+            <div class="thumbnail-mary-caption"><a class="icon fl-bigmug-line-zoom60" href="images/slider3.jpg"
+                data-lightgallery="item"><img src="images/slider3.jpg" alt="" width="270" height="195" /></a>
             </div>
           </article>
           <!-- Thumbnail Classic-->
@@ -897,7 +908,7 @@
         </div>
       </div>
     </footer>
-    <div class="modal modal-video" id="exampleModal" tabindex="-1" role="dialog">
+    <!-- <div class="modal modal-video" id="exampleModal" tabindex="-1" role="dialog">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
@@ -909,7 +920,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
   <!-- Global Mailform Output-->
   <div class="snackbars" id="form-output-global"></div>
