--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
               <p class="swiper-slider-text text-width-extra-large" data-caption-animate="fadeInRight"
                 data-caption-delay="0">Expert landscaping, gardening, and maintenance services that bring your vision to
                 life.</p>
-              <div class="oh button-wrap"><a class="button button-primary" href="#contacts" data-caption-animate="slideInUp"
-                  data-caption-delay="200">Get a Free Quote</a></div>
+              <div class="oh button-wrap"><a class="button button-primary" href="#contacts"
+                  data-caption-animate="slideInUp" data-caption-delay="200">Get a Free Quote</a></div>
             </div>
           </div>
         </div>
@@ -223,8 +223,8 @@
               <p class="swiper-slider-text text-width-extra-large" data-caption-animate="fadeInLeft"
                 data-caption-delay="200">Our gardening and landscape design experts are ready to offer you their help
                 and assistance in creating the landscape of your dream.</p>
-              <div class="oh button-wrap"><a class="button button-primary" href="#contacts" data-caption-animate="slideInDown"
-                  data-caption-delay="0">Get a Free Quote</a></div>
+              <div class="oh button-wrap"><a class="button button-primary" href="#contacts"
+                  data-caption-animate="slideInDown" data-caption-delay="0">Get a Free Quote</a></div>
             </div>
           </div>
         </div>
@@ -237,8 +237,8 @@
               <p class="swiper-slider-text text-width-extra-large" data-caption-animate="fadeInLeft"
                 data-caption-delay="200">With over 20 prestigious awards, Abu Dhabi Landscape is on top of the industry
               </p>
-              <div class="oh button-wrap"><a class="button button-primary" href="#contacts" data-caption-animate="slideInUp"
-                  data-caption-delay="400">Get a Free Quote</a></div>
+              <div class="oh button-wrap"><a class="button button-primary" href="#contacts"
+                  data-caption-animate="slideInUp" data-caption-delay="400">Get a Free Quote</a></div>
             </div>
           </div>
         </div>
@@ -726,7 +726,7 @@
           </article>
           <!-- Thumbnail Classic-->
           <article class="thumbnail thumbnail-mary">
-            <div class="thumbnail-mary-figure"><img src="images/img3.jpg" alt="" width="270" height="195" />
+            <div class="thumbnail-mary-figure"><img src="images/img2.jpg" alt="" width="270" height="195" />
             </div>
             <div class="thumbnail-mary-caption"><a class="icon fl-bigmug-line-zoom60" href="images/garden1.jpg"
                 data-lightgallery="item"><img src="images/garden1.jpg" alt="" width="270" height="195" /></a>
@@ -740,7 +740,7 @@
             </div>
           </article>
           <article class="thumbnail thumbnail-mary">
-            <div class="thumbnail-mary-figure"><img src="images/img3.jpg" alt="" width="270" height="195" />
+            <div class="thumbnail-mary-figure"><img src="images/garden2.jpg" alt="" width="270" height="195" />
             </div>
             <div class="thumbnail-mary-caption"><a class="icon fl-bigmug-line-zoom60" href="images/garden2.jpg"
                 data-lightgallery="item"><img src="images/garden2.jpg" alt="" width="270" height="195" /></a>
@@ -838,38 +838,20 @@
         <div class="footer-content">
           <!-- Company Info -->
           <div class="footer-column">
-            <h3 class="footer-heading">About Us</h3>
+            <h3 class="footer-heading">Abu Dhabi Landscape</h3>
             <p class="footer-text">
               Transforming outdoor spaces across the UAE with expert landscaping services.
-              Creating beautiful, sustainable gardens and landscapes since [Year].
             </p>
-            <div class="footer-social">
-              <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
-              <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
-              <a href="#" class="social-link"><i class="fab fa-linkedin-in"></i></a>
-              <a href="#" class="social-link"><i class="fab fa-whatsapp"></i></a>
-            </div>
           </div>
 
           <!-- Quick Links -->
           <div class="footer-column">
             <h3 class="footer-heading">Quick Links</h3>
             <ul class="footer-links">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Our Services</a></li>
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Contact</a></li>
-            </ul>
-          </div>
-
-          <!-- Services -->
-          <div class="footer-column">
-            <h3 class="footer-heading">Our Services</h3>
-            <ul class="footer-links">
-              <li><a href="#">Lawn Maintenance</a></li>
-              <li><a href="#">Irrigation Systems</a></li>
-              <li><a href="#">Tree Care</a></li>
-              <li><a href="#">Landscape Lighting</a></li>
+              <li><a href="#home">Home</a></li>
+              <li><a href="#services">Services</a></li>
+              <li><a href="#testimonials">Testimonials</a></li>
+              <li><a href="#contacts">Contact</a></li>
             </ul>
           </div>
 
@@ -889,10 +871,6 @@
                 <i class="fas fa-envelope"></i>
                 <span>info@abudhabilandscape.ae</span>
               </li>
-              <li>
-                <i class="fas fa-clock"></i>
-                <span>Sat - Fri: 8:00 AM - 6:00 PM</span>
-              </li>
             </ul>
           </div>
         </div>
@@ -900,11 +878,6 @@
         <!-- Footer Bottom -->
         <div class="footer-bottom">
           <p>&copy; 2025 Abu Dhabi Landscape. All Rights Reserved.</p>
-          <div class="footer-bottom-links">
-            <a href="#">Privacy Policy</a>
-            <span>|</span>
-            <a href="#">Terms & Conditions</a>
-          </div>
         </div>
       </div>
     </footer>
