--- a/index.html
+++ b/index.html
@@ -40,9 +40,6 @@
           data-xxl-device-layout="rd-navbar-static" data-lg-stick-up-offset="46px" data-xl-stick-up-offset="46px"
           data-xxl-stick-up-offset="46px" data-lg-stick-up="true" data-xl-stick-up="true" data-xxl-stick-up="true"
           data-xl-anchor-nav-offset="-78" data-xxl-anchor-nav-offset="-78">
-          <div class="rd-navbar-collapse-toggle rd-navbar-fixed-element-1" data-rd-navbar-toggle=".rd-navbar-collapse">
-            <span></span>
-          </div>
           <div class="rd-navbar-main-outer">
             <div class="rd-navbar-main">
               <!-- RD Navbar Panel-->
@@ -806,15 +803,15 @@
                 </div>
                 <div class="col-sm-6 oh-desktop">
                   <div class="box-footer-form wow slideInLeft">
-                    <form class="rd-form rd-mailform" data-form-output="form-output-global" data-form-type="contact"
-                      method="post" action="bat/rd-mailform.php">
+                    <form id="contact-form" class="rd-form rd-mailform" data-form-output="form-output-global"
+                      data-form-type="contact" action="https://formspree.io/f/mgvpapeg" method="POST">
                       <div class="form-wrap">
                         <input class="form-input" id="contact-name-7" type="text" name="name"
                           data-constraints="@Required">
                         <label class="form-label" for="contact-name-7">Your Name</label>
                       </div>
                       <div class="form-wrap">
-                        <input class="form-input" id="contact-email-7" type="email" name="email"
+                        <input class="form-input" id="contact-email-7" type="email" name="_replyto"
                           data-constraints="@Email @Required">
                         <label class="form-label" for="contact-email-7">E-mail</label>
                       </div>
@@ -823,7 +820,9 @@
                         <textarea class="form-input" id="contact-message-7" name="message"
                           data-constraints="@Required"></textarea>
                       </div>
-                      <button class="button button-block button-gray-11" type="submit">Request a Quote</button>
+                      <button class="button button-block button-gray-11" id="submit-btn" type="submit">Request a
+                        Quote</button>
+                      <p id="form-status" style="margin-top:10px; font-weight:500;"></p>
                     </form>
                   </div>
                 </div>
@@ -900,6 +899,40 @@
   <!-- Javascript-->
   <script src="js/core.min.js"></script>
   <script src="js/script.js"></script>
+  <script>
+    const form = document.getElementById("contact-form");
+    const status = document.getElementById("form-status");
+    const submitBtn = document.getElementById("submit-btn");
+
+    form.addEventListener("submit", async (e) => {
+      e.preventDefault();
+
+      // Disable button and show loading text
+      submitBtn.disabled = true;
+      submitBtn.innerText = "Sending...";
+
+      try {
+        const response = await fetch(form.action, {
+          method: form.method,
+          body: new FormData(form),
+          headers: { 'Accept': 'application/json' }
+        });
+
+        if (response.ok) {
+          status.innerHTML = "✅ Thank you! Your message has been sent successfully.";
+          form.reset();
+        } else {
+          status.innerHTML = "❌ Oops! There was a problem submitting your form.";
+        }
+      } catch (error) {
+        status.innerHTML = "❌ Network error. Please try again later.";
+      } finally {
+        submitBtn.disabled = false;
+        submitBtn.innerText = "Send Message";
+      }
+    });
+  </script>
+
   <!-- coded by kraken-->
 </body>
 
