comapany name edited

--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
             <article class="quote-creative"><a class="quote-creative-figure" href="#"><img class="img-circles"
                   src="images/user-13-87x87.jpg" alt="user image" width="87" height="87" /></a>
               <div class="quote-creative-text">
-                <p class="q">Abu Dhabi Landscaping completely transformed our villa garden! The team was professional
+                <p class="q">Lunar Landscaping completely transformed our villa garden! The team was professional
                   and delivered on time</p>
               </div>
               <h5 class="quote-creative-cite"><a href="#">Justin Johnson</a></h5>
